# A1_manager

./: .gitignore  README.md  Testing_playbook.ipynb  pyproject.toml  pytest.ini  refactor.py
a1_manager/: __init__.py  a1manager.py  autofocus_main.py  dish_main.py  dmd_calibration.py  logging_setup.py  main.py  test.py
a1_manager/autofocus/: af_main.py  af_manager.py  af_mtds.py  af_utils.py  autofocus_gui.py
a1_manager/dish_calibration/: dish_calib.py  dish_main.py
a1_manager/dish_manager/: dish_calib.py  dish_calib_manager.py  dish_grid.py  dish_main.py  main_dish_manager.py  well_grid_manager.py
a1_manager/dish_manager/dish_calibration/: dish_35mm.py  dish_384well.py  dish_96well.py  dish_ibidi.py  geometry_utils.py  prompt_utils.py  round_dish.py  square_dish.py  well_utils.py
a1_manager/dish_manager/dish_utils/: geometry_utils.py  json_utils.py  prompt_utils.py  well_utils.py
a1_manager/dish_manager/well_grid/: grid_generator.py  well_circle.py  well_selection.py  (+1 more)
a1_manager/microscope_hardware/: cameras.py  dmd_manager.py  lamps_factory.py  marZ_api.py  nikon.py  valves.py
a1_manager/nanopick/: API_MarZ  API_head
a1_manager/utils/: class_utils.py  json_utils.py  logging_setup.py  utility_classes.py  utils.py
config/: calib_384well.json  calib_96well.json  dmd_profile.json  optical_configuration.json  transfo_matrix.json
tests/: conftest.py  diag_valve.py  injection_movement.py  injection_tests.ipynb  stage_shaking.py  visualize.py  without_imaging.py
tests/a1_manager/: test_a1_manager.py
tests/dish_manager/: test_well_grid_manager.py
(+33 files in other folders)
