[project]
name = "a1-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pycromanager>=1.0.1",
    "scikit-image>=0.25.2",
    "tifffile>=2025.2.18",
]

[project.scripts]
a1-manager = "a1_manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
