[project]
name = "a1-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" },
    { name = "Raphael Feurstein", email = "raphael.feurstein@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gem-logging",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pycromanager>=1.0.1",
    "python-tsp>=0.2.0",
    "scikit-image>=0.25.2",
    "tifffile>=2025.2.18",
]

[project.scripts]
a1-manager = "a1_manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]

[tool.uv.sources]
gem-logging = { path = "../GEM_Logging", editable = true }
